refactor RenderHistory function

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
             </div>
           </div>
         </form>
-        <div class="list-group" id="history"></div>
+        <div class="list-group" id="history">
+        </div>
+        <button id="clear" class="btn btn-alert">Clear</button>
       </aside>
 
       <div class="col-lg-9 pb-3">
